--- a/streamflix/css/style.css
+++ b/streamflix/css/style.css
@@ -1,5 +1,46 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
+/* NetflixSans Font - Light */
+
+@font-face {
+    font-family: "NetflixSans-Light";
+    src: url("../assets/netflix-sans-font/NetflixSans-Light.woff2") format("woff2"),
+        url("../assets/netflix-sans-font/NetflixSans-Light.otf") format("otf");
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+/* NetflixSans Font - Regular */
+@font-face {
+    font-family: "NetflixSans-Regular";
+    src: url("../assets/netflix-sans-font/NetflixSans-Regular.woff2") format("woff2"),
+        url("../assets/netflix-sans-font/NetflixSans-Regular.otf") format("otf");
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+/* NetflixSans Font - Medium */
+@font-face {
+    font-family: "NetflixSans-Medium";
+    src: url("../assets/netflix-sans-font/NetflixSans-Medium.woff2") format("woff2"),
+        url("../assets/netflix-sans-font/NetflixSans-Medium.otf") format("otf");
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+/* NetflixSans Font - Bold */
+@font-face {
+    font-family: "NetflixSans-Bold";
+    src: url("../assets/netflix-sans-font/NetflixSans-Bold.woff2") format("woff2"),
+        url("../assets/netflix-sans-font/NetflixSans-Bold.otf") format("otf");
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
+
 body {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
@@ -11,6 +52,10 @@ body {
     color: white;
 }
 
+svg {
+    width: 18px;
+    height: 18px;
+}
 
 section h4 {
     font-size: 24px;
@@ -117,21 +162,31 @@ header {
 
 .button-play,
 .button-info {
+    font-family: "NetflixSans-Medium", sans-serif;
     padding: 12px 24px;
     border: none;
     border-radius: 6px;
-    font-size: 18px;
-    font-weight: bold;
     cursor: pointer;
     display: flex;
     align-items: center;
     gap: 8px;
     transition: all 0.2s ease;
+    letter-spacing: 0.5px;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    letter-spacing: 0.5px;
 }
 
 .button-play {
-    background: white;
+    background: rgba(255, 255, 255, 0.94);
     color: black;
+}
+
+.button-play img {
+    width: 16px;
+    height: 16px;
+    margin-top: 5px;
 }
 
 .button-play:hover {
@@ -141,6 +196,14 @@ header {
 .button-info {
     background: rgba(109, 109, 110, 0.7);
     color: white;
+    font-size: 16px;
+    letter-spacing: 0.5px;
+}
+
+.button-info img {
+    width: 16px;
+    height: 16px;
+    margin-top: 5px;
 }
 
 .button-info:hover {
@@ -173,7 +236,6 @@ nav ul li a {
 nav ul li a:hover {
     color: #bcbcbc;
 }
-
 
 /* Search Zone */
 .search-zone form {
@@ -229,13 +291,13 @@ nav ul li a:hover {
 }
 
 article {
-    background-color: rgba(109, 109, 110, 0.1);
     border-radius: 20px;
     transition: transform 0.3s ease;
     cursor: pointer;
+    height: fit-content;
 }
+
 article:hover {
-    background-color: rgba(109, 109, 110, 0.2);
     transform: scale(1.02);
 }
 
@@ -243,24 +305,65 @@ article h3 {
     text-align: center;
 }
 
+.trending-film-card,
+.recommended-film-card {
+    position: relative;
+    overflow: hidden;
+}
+
+.show-on-hover {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: linear-gradient(to bottom,
+            rgba(0, 0, 0, 0.4),
+            rgba(0, 0, 0, 0.6));
+    transform: translateY(100%);
+    opacity: 0;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    overflow: hidden;
+}
+
+.hover-text {
+    color: white;
+    padding: 15px;
+}
+
+/* Trigger and show text when the parent card is hovered */
+
+.trending-film-card:hover .show-on-hover,
+.recommended-film-card:hover .show-on-hover {
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.hover-text h3 {
+    margin: 0 0 10px 0;
+    font-size: 18px;
+}
+
+.hover-text ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.hover-text li {
+    font-size: 12px;
+    margin: 4px 0;
+    opacity: 0.8;
+}
+
 .trending-film-card img,
 .recommended-films img,
 .new-releases img {
-    width: 200px;
-    height: 300px;
-    padding: 18px;
+    width: 250px;
+    height: 350px;
+    padding: 18px 10px 0 10px;
     border-radius: 25px;
     object-fit: cover;
-
 }
-
-/*
-.trending-film-card img:hover,
-.recommended-films img:hover,
-.new-releases img:hover {
-    transform: scale(1.05);
-}
-    */
 
 .trending-film-card ul,
 .recommended-films ul,
